--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,17 @@
 baseURL = "https://covid-ufop.netlify.app/"
 languageCode = "en-us"
 defaultContentLanguage = "en"
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-172044352-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-172044352-1');
+</script>
+
 title = "Covid-19 no Quadrilátero Ferrífero"
 theme = "hermit-master"
 # enableGitInfo = true
