--- a/config.toml
+++ b/config.toml
@@ -70,7 +70,7 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
 [menu]
 
   [[menu.main]]
-    name = "Serviços"
+    name = "Serviços Voluntários"
     url = "/servicos"
     weight = 10
 
