--- a/config.toml
+++ b/config.toml
@@ -77,7 +77,7 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
 
   [[menu.main]]
     name = "Boletins Epidemiológicos"
-    url = "Boletins/"
+    url = "/Boletins_hj"
     weight = 20
 
 
