--- a/config.toml
+++ b/config.toml
@@ -91,3 +91,19 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
     name = "Descrição dos dados"
     url = "descricao/"
     weight = 50
+  
+  languages:
+  DefaultContentLanguage: en
+  en:
+    baseURL: https://covid-ufop.netlify.app
+    languageName: English
+    title: In English
+    weight: 2
+  pt:
+    baseURL: https://covid-ufop.netlify.app.br
+    languageName: Portugues
+    title: Em Portugues
+    weight: 1
+  params:
+    navigation:
+      help: Help
