--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,21 @@ languageCode = "en-us"
 defaultContentLanguage = "en"
 title = "Covid-19 no Quadrilátero Ferrífero"
 theme = "hermit-master"
+DefaultContentLanguage: en
+  en:
+    baseURL: https://covid-ufop.netlify.app
+    languageName: English
+    title: In English
+    weight: 2
+  pt:
+    baseURL: https://covid-ufop.netlify.app.br
+    languageName: Portugues
+    title: Em Portugues
+    weight: 1
+  params:
+    navigation:
+      help: Help
+  
 # enableGitInfo = true
 pygmentsCodefences  = true
 pygmentsUseClasses  = true
@@ -25,24 +40,7 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
   tag = "tags"
   # Categories are disabled by default.
 
-[params]
-  
-  languages:
-  DefaultContentLanguage: en
-  en:
-    baseURL: https://covid-ufop.netlify.app
-    languageName: English
-    title: In English
-    weight: 2
-  pt:
-    baseURL: https://covid-ufop.netlify.app.br
-    languageName: Portugues
-    title: Em Portugues
-    weight: 1
-  params:
-    navigation:
-      help: Help
-  
+[params
   dateform        = "Jan 2, 2006"
   dateformShort   = "Jan 2"
   dateformNum     = "2006-01-02"
